lib/src/compiler/tests/testdata/errors/39.out
error[E112]: invalid regular expression
 --> line:3:15
  |
3 |     $a = /abc[b-a]/
  |               ^^^ invalid character class range, the start must be <= the end
  |